# theia-pluginlibs

./: README.md
TheiaPy/: .gitignore  README.rst  pyproject.toml  setup.cfg
TheiaPy/TheiaPy/: __init__.py  dispatch.py  emojilist.py  replies.py
