[metadata]
name = TheiaPy
version: attr: TheiaPy.__version__
author = The Iris System
author_email = iris@iris.ac.nz
description = Python library for writing Theia plugins
url = https://github.com/theia-discord/theia
license = AGPL-v3

[options]
python_requires = >=3.9
include_package_data = False
packages = find:

install_requires =
    setuptools > 42.0
